added changes to index

--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
 
 <body>
 	<div id="header-container">
-		<div>
+			
 			<header>
 				<h1>List Of Inventors Killed By Their Own Inventions</h1>
 			</header>
-		</div>
+		
 	</div>
+
 	<div id="main-container">
-		<div>
+		<div class="row"> <!-- row was added -->
+			<div class="col"> <!-- Starting column in 1/4 size -->
 			<nav>
 				<ul>
 					<li><a href="#automotive">Automotive</a></li>
@@ -30,6 +32,8 @@
 					<li><a href="#myths">Popular Myths and Related Stories</a></li>
 				</ul>
 			</nav>
+			</div> <!-- div that closes column -->
+			<div class="col-6"> <!-- 1/2 size column -->
 			<main>
 				<section id="intro">
 					<h2>What is this list?</h2>
@@ -158,6 +162,8 @@
 					</ul>
 				</section>
 			</main>
+		</div><!-- div that closes column-->
+		<div class="col"> <!-- 1/4 size div for column -->
 			<aside>
 				<h2>Additional Notes</h2>
 				<p>Some other interesting and similar links around the web:</p>
@@ -169,7 +175,8 @@
 					<li><a href="https://en.wikipedia.org/wiki/List_of_unusual_deaths">List of unusual deaths</a></li>
 				</ul>
 			</aside>
-		</div>
+		</div><!-- div that closes column -->
+	</div>
 	</div>
 	<div id="footer-container">
 		<div>
@@ -177,6 +184,7 @@
 				&copy; Copyright 2019
 			</footer>
 		</div>
+
 	</div>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
 		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
